--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 name: mturing
 email: mturing@163.com
 author: tangc
-url: http://www.hifreud.com
+url: http://www.mturing.top
 resume_site: http://www.hifreud.com/Resume.io/
-github: https://github.com/luoyan35714/
+github: https://github.com/mturing
 baseurl: ""
 description: Actually, less is more!
 meta_description: tangc;个人博客;学而不思则罔;思而不学则殆;生命不止;折腾不休
